attempt to fix inconsistent padding on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -50,7 +50,7 @@ html {
 body {
   background-color: $site-background;
   margin: 0 auto;
-  padding: 0 0.8em;
+  padding: 0 0.7em;
   max-width: 42em;
   font-size: $rootsize;
   font-family: $font-family;
